--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ vignettes/*.pdf
 # knitr and R markdown default cache directories
 *_cache/
 /cache/
+*_files/
 
 # Temporary files created by R markdown
 *.utf8.md
@@ -37,3 +38,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+./response_to_reviewers.md
